feat: add JVM flags to suppress Netty/gRPC sun.misc.Unsafe warnings
Adds --add-opens JVM flags to applicationDefaultJvmArgs for all providers
built with the kite-provider plugin. This suppresses deprecation warnings
for sun.misc.Unsafe methods in Java 22+ without requiring configuration
in each provider project.